--- a/style.css
+++ b/style.css
@@ -163,3 +163,11 @@ nav ul li a:hover {
 {
   background-color: #ddd;
 }
+
+footer
+{
+    padding: 10px 0;
+    text-align: center;
+    color: #4E7145;
+    background-color: #e3e3e3;
+}
