--- a/style.css
+++ b/style.css
@@ -98,6 +98,13 @@ nav ul li a:hover {
   text-decoration: none;
 }
 
+/* トップ画像 */
+div .sample {
+  width: 744px;
+  height: 418px;
+  background-color: #707070;
+}
+
 /* フッター */
 #contact {
   background-color: #4E7145;
