--- a/style.css
+++ b/style.css
@@ -137,6 +137,10 @@ nav ul li a:hover {
   padding: 0 5px;
 }
 
+#skills h2 {
+  color: #4E7145;
+}
+
 #skills p {
   padding: 16px 5px 0 5px;
   text-align: justify;
@@ -155,7 +159,7 @@ nav ul li a:hover {
   -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
           border-radius: 50%;
-  background-color: #707070;
+  background-color: #4E7145;
 }
 
 #skills .fa-html5 {
