--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ nav ul li a:hover {
 #skills i {
   font-size: 2.8rem;
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
+    -moz-box-sizing: border-box;
           box-sizing: border-box;
   width: 80px;
   height: 80px;
@@ -188,7 +188,7 @@ nav ul li a:hover {
   text-align: center;
   color: #fff;
   -webkit-border-radius: 50%;
-     -moz-border-radius: 50%;
+    -moz-border-radius: 50%;
           border-radius: 50%;
   background-color: #4E7145;
 }
@@ -268,7 +268,7 @@ nav ul li a:hover {
   text-align: center;
   color: #fff;
   -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
+    -moz-border-radius: 4px;
           border-radius: 4px;
   background-color: #4E7145;
 }
@@ -346,7 +346,7 @@ nav ul li a:hover {
   text-align: center;
   color: #fff;
   -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
+    -moz-border-radius: 4px;
           border-radius: 4px;
   background-color: #4E7145;
 }
@@ -380,7 +380,7 @@ nav ul li a:hover {
   font-size: 2.8rem;
   display: inline-block;
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
+    -moz-box-sizing: border-box;
           box-sizing: border-box;
   margin-right: 22px;
   text-align: center;
@@ -410,7 +410,7 @@ nav ul li a:hover {
   height: 80px;
   color: #707070;
   -webkit-border-radius: 50%;
-     -moz-border-radius: 50%;
+    -moz-border-radius: 50%;
           border-radius: 50%;
   background-color: #fff;
 }
@@ -424,4 +424,77 @@ footer {
     text-align: center;
     color: #4E7145;
     background-color: #e3e3e3;
+}
+
+  /* タブレット縦以下のサイズの場合 */
+@media (max-width: 767px) {
+  /* 全般的なCSS */
+  body {
+    font-size: .94em;
+    line-height: 1.5;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.25em;
+  }
+
+  h3 {
+    font-size: 1.15em;
+  }
+
+  .container {
+    width: 100%;
+    margin: auto;
+  }
+
+  #nav {
+    position: relative;
+  }
+
+  #nav #responsive-btn {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    display: inline-block;
+    margin: 10px auto;
+    height: 40px;
+    width: 40px;
+    line-height: 36px;
+    border: solid 3px #fff;
+    border-radius: 10px;
+    color: #4E7145;
+    background-color: #fff;
+    font-size: 1.6em;
+  }
+
+  #close-btn {
+    font-size: 1.8rem;
+    display: none;
+  }
+
+  nav ul {
+    position: absolute;
+    top: 60px;
+    display: block;
+    width: 100%;
+    z-index: 100;
+    display: none;
+  }
+
+  nav ul li {
+    width: 100%;
+    height: 60px;
+    margin-right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-bottom: solid 1px #fff;
+  }
+
+  nav ul li a {
+    width: 100%;
+    height: 45px;
+  }
 }
