--- a/style.css
+++ b/style.css
@@ -541,4 +541,22 @@ footer {
     width: 75px;
     height: 75px;
   }
+
+  /* ポートフォリオ */
+  #portfolio .works-box {
+    position: static;
+    display: block;
+    margin: 0 auto;
+    margin-top: 16px;
+  }
+
+  #portfolio .works-box a .works-box-inner {
+    display: inline-block;
+    width: 100%;
+  }
+
+  #portfolio .works-box a .works-box-inner .button-readmore:hover {
+    color: #fff;
+    background-color: #4E7145;
+  }
 }
