--- a/style.css
+++ b/style.css
@@ -481,6 +481,10 @@ footer {
     font-size: 1.6em;
   }
 
+  #menu-btn {
+    display: inline;
+  }
+
   #close-btn {
     font-size: 1.8rem;
     display: none;
@@ -506,6 +510,10 @@ footer {
   nav ul li a {
     width: 100%;
     height: 45px;
+  }
+
+  nav ul li:hover {
+    border-bottom: 1px solid #fff;
   }
 
   /* トップ画像 */
