--- a/css/profile.css
+++ b/css/profile.css
@@ -31,8 +31,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform : translate(-50%,-50%);
-    transform : translate(-50%,-50%);
+    -webkit-transform : translate(-50%, -50%);
+    transform : translate(-50%, -50%);
 }
 
 #profile table {
@@ -87,4 +87,25 @@
 
 #lessons #udemy {
     padding: 10px 30px 0 30px;
+}
+
+#lessons li {
+    padding: 3px 0;
+}
+
+/* タブレット縦以下のサイズの場合 */
+@media (max-width: 767px) {
+    #profile .wrapper {
+        display: inline-block;
+    }
+
+    #profile .area {
+        width: 70vw;
+    }
+
+    #profile img {
+        position: static;
+        -webkit-transform : translate(0, 0);
+        transform : translate(0, 0);
+    }
 }
