[update]スタイルシートにテーマ情報を記載
WordPressでテーマとして認識するよう

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+Theme Name: DevLog
+Author: Soh
+Description: This is DevLog's theme.
+Version: 0.1
+*/
+
 /* 全般的なCSS */
 body {
   font-family: 'Karla',YuGothic,"Yu Gothic","Hiragino Sans","ヒラギノ角ゴシック","メイリオ",Meiryo,"ＭＳ Ｐゴシック","MS PGothic",sans-serif;
