--- a/style.css
+++ b/style.css
@@ -27,9 +27,17 @@ h2 {
   font-weight: bold;
 }
 
+h2 a:hover {
+  text-decoration: none;
+}
+
 h3 {
   font-size: 1.2em;
   font-weight: bold;
+}
+
+article {
+  margin-bottom: 30px;
 }
 
 .container {
