[update]コメントの表示

--- a/style.css
+++ b/style.css
@@ -264,6 +264,45 @@ footer {
   background-color: #4E7145;
 }
 
+/* コメント投稿フォーム */
+#respond p {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1em;
+}
+
+#respond label {
+  font-size: 1em;
+}
+
+#respond input, #respond textarea {
+  width: 100%;
+  padding: 5px;
+  background-color: #fff;
+  border: solid 1px #666;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+#respond input[type="submit"] {
+  width: 200px;
+  margin-top: 30px;
+  padding: 5px;
+  border: none;
+  color: #fff;
+  background-color: #4e7145;
+  -webkit-appearance: none;
+}
+
+#respond input[type="submit"]:hover {
+  background-color: #395333;
+}
+
+#respond .required {
+  color: #ec5b5b;
+}
+
 /* タブレット縦以下のサイズの場合 */
 @media (max-width: 767px) {
   /* 全般的なCSS */
