--- a/style.css
+++ b/style.css
@@ -303,6 +303,39 @@ footer {
   color: #ec5b5b;
 }
 
+/* コメント */
+#comments footer {
+  text-align: left;
+  background: none;
+  margin: 0;
+  color: #666;
+  font-size: 1em;
+}
+
+#comments footer a {
+  color: #666;
+}
+
+#comments footer div {
+  display: inline;
+}
+
+#comments ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#comments article {
+  border: dotted 1px #666;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+
+#comments .comment-content {
+  margin-left: 30px;
+}
+
 /* タブレット縦以下のサイズの場合 */
 @media (max-width: 767px) {
   /* 全般的なCSS */
