[update]スタイルシートヘッダーを記述
WordPressテーマを読み込ませるため #47

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+Theme Name: DevLog
+Author: 佐藤壮一
+Description: 自信のポートフォリオサイト用テーマ
+Version: 1.0
+*/
+
 /* 全般的なCSS */
 body {
   font-family: 'Karla',YuGothic,"Yu Gothic","Hiragino Sans","ヒラギノ角ゴシック","メイリオ",Meiryo,"ＭＳ Ｐゴシック","MS PGothic",sans-serif;
