--- a/style.css
+++ b/style.css
@@ -153,6 +153,29 @@ footer {
     background-color: #e3e3e3;
 }
 
+/* 前後へのリンク */
+.pagenav a {
+  padding: 5px 10px;
+  border: solid 1px #cccccc;
+  border-radius: 10px;
+  color: #666666;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pagenav .navleft a {
+  float: left;
+}
+
+.pagenav .navright a {
+  float: right;
+}
+
+.pagenav {
+  overflow: hidden;
+  margin: 30px 0;
+}
+
 /* タブレット縦以下のサイズの場合 */
 @media (max-width: 767px) {
   /* 全般的なCSS */
