--- a/css/article.css
+++ b/css/article.css
@@ -38,3 +38,12 @@
     color: #707070;
     font-weight: bold;
 }
+
+@media (max-width: 767px) {
+    #entry {
+        margin-bottom: 30px;
+        padding: 5%;
+        background-color: #fff;
+        text-align: left;
+    }
+}
