[update]タイトル部分にマウスを載せてもアンダーラインが表示されないように変更
デザイン性を向上させるため #70

--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ a:hover {
   text-decoration: underline;
 }
 
+h1 a:hover {
+  text-decoration: none;
+}
+
 /* サンプル画像 */
 .top-picture {
   display: block;
