--- a/css/list.css
+++ b/css/list.css
@@ -29,3 +29,35 @@
 #list .postinfo {
     padding: 5px 0;
 }
+
+@media (max-width: 767px) {
+    #list {
+        padding: 10px 20px;
+    }
+
+    #list article {
+        padding: 10px 0;
+    }
+
+    #list .eyecatch {
+        text-align: center;
+        width: 105px;
+    }
+
+    #list .eyecatch img {
+        width: 100%;
+        height: auto;
+    }
+
+    #list h1 {
+        font-size: .9em;
+    }
+
+    #list .postinfo {
+        font-size: .7em;
+    }
+
+    #list time {
+        display: block;
+    }
+}
