--- a/css/toppage.css
+++ b/css/toppage.css
@@ -360,6 +360,10 @@
     margin-top: 30px;
   }
 
+  #blog .button-readmore {
+    padding: 10px 0;
+  }
+
   #blog .button-readmore:hover {
     background-color: #4E7145;
   }
