--- a/css/article.css
+++ b/css/article.css
@@ -14,6 +14,11 @@
     text-align: right;
 }
 
+#entry .wp-post-image {
+    width: 100%;
+    height: auto;
+}
+
 #entry p {
     margin: 15px 0 15px 0;
     font-size: 1em;
